[project]
name = "thordata-firecrawl"
version = "0.1.0"
description = "Thordata Crawl – Turn any website into AI-ready data with a single API."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Thordata", email = "support@thordata.com" }
]
dependencies = [
  "thordata-sdk>=1.8.5",  # Uses the official Thordata Python SDK
  "click>=8.0.0",
  "html2text>=2020.1.16",
]

[project.optional-dependencies]
llm = [
  "openai>=1.0.0",
]
server = [
  "fastapi>=0.100.0",
  "uvicorn[standard]>=0.23.0",
  "pydantic>=2.0.0",
  "pyyaml>=6.0.0",
]
all = [
  "openai>=1.0.0",
  "fastapi>=0.100.0",
  "uvicorn[standard]>=0.23.0",
  "pydantic>=2.0.0",
  "pyyaml>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/Thordata/thordata-firecrawl"
Repository = "https://github.com/Thordata/thordata-firecrawl"

[project.scripts]
thordata-firecrawl = "thordata_firecrawl.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

